--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mono-postgres",
+  "name": "mono-sequelize",
   "version": "0.0.1",
-  "description": "PostreSQL module for Mono",
+  "description": "Sequelize module for Mono",
   "main": "lib/",
   "files": [
     "lib"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AdminLP/mono-postgres"
+    "url": "git+https://github.com/AdminLP/mono-sequelize"
   },
   "author": "Vasiliy Kryuchkov",
   "nyc": {
@@ -23,16 +23,21 @@
   },
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/AdminLP/mono-postgres/issues"
+    "url": "https://github.com/AdminLP/mono-sequelize/issues"
   },
-  "homepage": "https://github.com/AdminLP/mono-postgres#readme",
-  "dependencies": {},
+  "homepage": "https://github.com/AdminLP/mono-sequelize#readme",
+  "dependencies": {
+    "pg": "^7.4.3",
+    "sequelize": "^4.37.10"
+  },
   "devDependencies": {
     "@terrajs/mono": "^0.8.0",
-    "mono-test-utils": "^1.2.3",
     "ava": "^0.24.0",
     "codecov": "^3.0.0",
     "eslint": "^4.13.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "mono-test-utils": "^1.2.3",
     "nyc": "^11.3.0"
   },
   "keywords": [
